# visual-odometry-3d-reconstruction

./: .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml  requirements.txt
.codex/: config.toml
configs/: default.yaml  mapping.yaml  triangulation.yaml
docs/: AGENTS.md  phase_0_setup.md  phase_1_dataset.md  phase_2_features.md  phase_3_triangulation.md  phase_4_mapping.md  phase_5_pnp.md  project_plan.md  ui_architecture.md  ui_components.md  ui_correspondence_plan.md  ui_deployment.md  ui_information_architecture.md  ui_observation_data_contract.md  ui_plan.md  ui_result_artifacts.md  ui_results_first_plan.md  ui_run_flow.md  ui_selection_state.md  ui_sequence_browser.md
docs/architecture/: data_flow.md  overview.md
docs/decisions/: 0001-foundation-scope.md  0002-bundled-sample-sequence.md
docs/domain/: datasets_and_config.md  vo_pipeline.md
docs/runbooks/: run_local_pipeline.md  use_real_kitti_sequence.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
plans/: foundation_bootstrap.md  phases_2_to_5_extension.md  ui_refocus_results_first.md
scripts/: evaluate_reprojection.py  export_pointcloud.py  run_vo.py
src/: __init__.py  camera.py  config.py
src/dataset/: __init__.py  base_dataset.py  kitti_dataset.py
src/features/: __init__.py  detector.py  (+2 more)
tests/: test_config_camera.py  test_dataset_tracking.py  test_initializer.py  test_map_pipeline.py  test_pnp.py  test_reprojection.py  test_transforms.py  test_triangulation.py
(+220 files in other folders)
